# python-website-development

./: LICENSE  README.md  app.py  pyproject.toml  replit.nix
templates/: footer.html  index.html  jobitem.html  navbar.html
